First test class

--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,8 @@
 
   <build>
     <pluginManagement>
-      <plugin>
+      <plugins>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.3</version>
@@ -61,6 +62,7 @@
             <target>${jdk.version}</target>
           </configuration>
         </plugin>
+      </plugins>
     </pluginManagement>
   </build>
 
