--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
   <build>
     <pluginManagement>
       <plugins>
+        
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
@@ -56,6 +57,28 @@
             <target>${jdk.version}</target>
           </configuration>
         </plugin>
+        
+        <!-- mvn clean compile package assembly:single -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>3.1.1</version>
+          <configuration>
+            <descriptorRefs>
+              <descriptorRef>jar-with-dependencies</descriptorRef>
+            </descriptorRefs>
+          </configuration>
+          <executions>
+            <execution>
+              <id>make-assembly</id>
+              <phase>package</phase>
+              <goals>
+                <goal>single</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        
       </plugins>
     </pluginManagement>
   </build>
